--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "guid": "0.0.12",
     "mongoose": "^5.9.14"
   },
   "devDependencies": {
